# 3dmaze

./: .gitignore  CMakeLists.txt  Makefile.dc  Makefile.ds  readme.md
.github/workflows/: main.yml
data/3dmaze/: textures.cfg
source/dc/: glmaze.c  slvmaze_player.c  ssmaze.c
source/nds/: freeglut_geometry.c  glmaze.c  slvmaze_player.c  ssmaze.c
source/pc/: glmaze.c  slvmaze_player.c  ssmaze.c
source/shared/: fixed.h  genmaze.c  genmaze.h  glmaze.h  maze.h  maze_std.h  pch.c  pch.h  slvmaze.c  slvmaze.h
